[package]
name = "white-label"
version = "1.0.0"
authors = ["Thomas Castiglione"]
description = "compile-time rebranding for rust"
readme = "README.md"
repository = "https://github.com/gulbanana/white-label/"
categories = ["development-tools::build-utils"]
license = "Apache-2.0"
edition = "2024"
build = "build.rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
